# grpc-go-python

./: README.md
client/: go.mod  main.go
proto/: hello.proto
server/: generate.py  main.py  pyproject.toml
