[tool.poetry]
package-mode = false
name = "server"
version = "0.1.0"
description = "The server side (microservice) using gRPC."
authors = ["Cylix Lee <cylix.lee@outlook.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
grpcio = "^1.67.0"


[tool.poetry.group.dev.dependencies]
grpcio-tools = "^1.67.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
